--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    </center>
    <table cellspacing="50">
      <tr>
-       <td><img src="C:\Users\Charles\Desktop\web development\circle-cropped.png" alt="charles profile picture"></td>
+       <td><img src="C:\Users\Charles\Desktop\web development\circle-cropped.png" alt="">C:\Users\Charles\Desktop\web development\circle-cropped.png</td>
        <td><h1 style="text-align:center"> <strong>Be Focus</h1>
        <h2 style="text-align:center"> <em>Be Couragous</h2>
        <h3 style="text-align:center"> <strong> Be Determined</h3>
@@ -30,7 +30,7 @@
   </tr>
 <tr>
   <td> <strong>Address</td>
-  <td> <em>28 Ekekhuan Road Benin City, Edo0 State, Nigeria</td>
+  <td> <em>28 Ekekhuan Road Benin City, Edo State, Nigeria</td>
 </tr>
 <td> <strong>Phone</td>
 <td> <em>07056630295</td>
