--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="40">
     <tr>
-      <td><img src="https://twitter.com/omoregbecharles/photo" alt=""></td>
+      <td><img src="C:\Users\Charles\Desktop\web development\20171020_114558.jpg" alt="charles profile picture"></td>
 <td>
         </center>
         <center>
