--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="40">
     <tr>
-      <td><img src="https://pbs.twimg.com/profile_banners/402884808/1602847607/600x200" alt="charles profile picture"></td>
+      <td><img src="https://pbs.twimg.com/media/EnXGufTXYAUNLtE?format=png&name=small" alt="charles profile picture"></td>
 <td>
         </center>
         <center>
