--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </center>
 <br>
 <h3>Send Me a Message</h3>
-<form action="mailto:charlesomoregbe@gmail.com" method="post">
+<form action="index.html" method="post">
   <label=>Name</label>
   <input type="text" name="name" value=""><br>
   <label>Email</label>
